--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/swagger": "^7.3.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
+    "pokedexback": "file:",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1"
@@ -36,7 +37,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -44,11 +45,12 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.0.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.2.4",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
@@ -68,6 +70,7 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
+    "preset": "ts-jest",
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
