--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "main.ts",
-        "use": "@vercel/node"
+        "src": "package.json",
+        "use": "vercel-sapper"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "main.ts",
+        "dest": "src/main.ts",
         "methods": [
           "GET",
           "POST",
