--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "package.json",
-        "use": "vercel-sapper"
+        "src": "src/main.ts",
+        "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "main.ts",
+        "dest": "src/main.ts",
         "methods": [
           "GET",
           "POST",
@@ -17,5 +17,10 @@
           "DELETE"
         ]
       }
-    ]
+    ],
+    "env": {
+      "MONGODB_URI": "@mongodb_uri",
+      "API_KEY": "@api_key"
+    }
   }
+  
