--- a/vercel.json
+++ b/vercel.json
@@ -17,5 +17,9 @@
           "DELETE"
         ]
       }
-    ]
+    ],
+    "env": {
+    "MONGODB_URI": "@mongodb_uri",
+    "API_KEY": "@api_key"
+  }
   }
