--- a/vercel.json
+++ b/vercel.json
@@ -2,24 +2,23 @@
     "version": 2,
     "builds": [
       {
-        "src": "package.json",
-        "use": "vercel-sapper"
+        "src": "src/main.ts",
+        "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "main.ts",
+        "dest": "src/main.ts",
         "methods": [
           "GET",
           "POST",
           "PUT",
           "DELETE"
-        ]
+        ],
+        "headers": {
+            "Access-Control-Allow-Origin": "*"
+        }
       }
-    ],
-    "env": {
-    "MONGODB_URI": "@mongodb_uri",
-    "API_KEY": "@api_key"
-  }
+    ]
   }
