add mongoAtlas e VA

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URL=mongodb+srv://vitoriagonzalez:MongoDB2024@cluster0.dkbwg.mongodb.net/PokedexDB?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URL=mongodb+srv://vitoriagonzalez:OgwNE2emoWL4aG82@cluster0.qfg5s.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
