--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URL=mongodb+srv://vitoriagonzalez:OgwNE2emoWL4aG82@cluster0.qfg5s.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://vitoriagonzalez:OgwNE2emoWL4aG82@cluster0.qfg5s.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
